--- a/index.html
+++ b/index.html
@@ -160,23 +160,23 @@
 	<h1>Prix</h1>
 	<ul class="Prix1">
 		<p>Saut en parachute en tandem</p>
-		<li><img src="images/skydive-spaceland-houston.jpg" alt="" >
+		<li><img src="images/skydive-spaceland-houston.jpg" alt="photo" >
 		<p>Prix : 269.95€( Jour ferier + week-end)</p></li>
 		</ul>
 			<ul class="Prix2">
 		<p>Saut en parachute en tandem</p>
-		<li><img src="images/Formation-B4-freefly-AIR65-parachutisme.jpg" alt="" >
+		<li><img src="images/Formation-B4-freefly-AIR65-parachutisme.jpg" alt="photo" >
 		<p>Prix : 249.95€ (Semaine)</p></li>
 		</ul>
 
 		<ul class="Prix3">
 		<p>Saut en parachute Pro</p>
-		<li><img src="images/DSC02376JPG_5e89ba7c50507.jpg" alt="" >
+		<li><img src="images/DSC02376JPG_5e89ba7c50507.jpg" alt="photo" >
 		<p>Prix : 279.95€( Jour ferier + week-end)</p></li>
 		</ul>
 			<ul class="Prix4">
 		<p>Saut en parachute Pro</p>
-		<li><img src="images/25205524-une-jeune-fille-joue-dans-un-style-libre-de-chute-libre.jpg" alt="" >
+		<li><img src="images/25205524-une-jeune-fille-joue-dans-un-style-libre-de-chute-libre.jpg" alt="photo" >
 		<p>Prix : 269.95€(Semaine)</p></li>
 		</ul>
 			<ul class="Prix5">
