--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr-FR" dir="ltr">
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
 <meta charset="UTF-8" />
 <link href="css/style.css" rel="stylesheet" type="text/css" />
 
@@ -123,7 +124,7 @@
 				   <ul class="tandem6F">
 					  <li><img src="images/téléchargement.jpg" alt="papillon" /></li>
 				      <li><h1>Tournage vidéo</h1>
-					   <p>En option supplémentaire, commandez un tournage vidéo. Coût : 70euro. Vous recevrez une vidéo éditée avec une musique libre de droits et facile à partager sur les réseaux sociaux.</p></li>
+					   <p>En option supplémentaire, commandez un tournage vidéo. Coût : 99.95euro. Vous recevrez une vidéo éditée avec une musique libre de droits et facile à partager sur les réseaux sociaux.</p></li>
 				  </ul>
 				</div>
 			</section>
@@ -159,33 +160,33 @@
 	<section id="Prix">
 	<h1>Prix</h1>
 	<ul class="Prix1">
-		<p>Saut en parachute en tandem</p>
+		<li><h2>Saut en parachute en tandem</h2></li>
 		<li><img src="images/skydive-spaceland-houston.jpg" alt="photo" >
 		<p>Prix : 269.95€( Jour ferier + week-end)</p></li>
 		</ul>
 			<ul class="Prix2">
-		<p>Saut en parachute en tandem</p>
+		<li><h2>Saut en parachute en tandem</h2></li>
 		<li><img src="images/Formation-B4-freefly-AIR65-parachutisme.jpg" alt="photo" >
 		<p>Prix : 249.95€ (Semaine)</p></li>
 		</ul>
 
 		<ul class="Prix3">
-		<p>Saut en parachute Pro</p>
+		<li><h2>Saut en parachute Pro</h2></li>
 		<li><img src="images/DSC02376JPG_5e89ba7c50507.jpg" alt="photo" >
 		<p>Prix : 279.95€( Jour ferier + week-end)</p></li>
 		</ul>
 			<ul class="Prix4">
-		<p>Saut en parachute Pro</p>
+		<li><h2>Saut en parachute Pro</h2></li>
 		<li><img src="images/25205524-une-jeune-fille-joue-dans-un-style-libre-de-chute-libre.jpg" alt="photo" >
 		<p>Prix : 269.95€(Semaine)</p></li>
 		</ul>
 			<ul class="Prix5">
-		<p>Reportage Video</p>
+		<li><h2>Reportage Video</h2></li>
 		<li>
 		<p>Prix : 69.95€</p></li>
 		</ul>
 			<ul class="Prix6">
-		<p>Reportage Video + Photos</p>
+		<li><h2>Reportage Video + Photos</h2></li>
 		<li>
 		<p>Prix : 99.95€</p></li>
 		</ul>
