--- a/index1.html
+++ b/index1.html
@@ -2,12 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
     <title>Rendez-vous</title>
     <link rel="stylesheet" href="css/style2.css" />
     <link rel="stylesheet" href="index.html" />
   </head>
   <body>
+  <div class="container">
     <div class="cloud-content">
       <nav id="menu">
         <ul>
@@ -42,10 +43,10 @@
       </section>
     </main>
 
-    <br class="annule" />
+    <br/>
     <div class="boxCONT">
       <ul class="boxCONTMENU">
-        <li><img src="images/R.png" width="250px" /></li>
+        <li><img src="images/R.png" /></li>
         <li>
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d17085.96368582939!2d4.451305768970937!3d50.46263521291547!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c228d0db96d9e5%3A0xc4a2ed66e37660d2!2z0JHRgNGO0YHRgdC10LvRjC3QqNCw0YDQu9C10YDRg9Cw!5e0!3m2!1sru!2sbe!4v1741115059499!5m2!1sru!2sbe"
@@ -73,5 +74,6 @@
         <p id="footer">© P.V.- 2025</p>
       </div>
     </footer>
+    </div>
   </body>
 </html>
